scss/partials/_reactions.scss
div.reactions {
  height: 25px;
  float: left;

  button.reaction-btn {
    margin-right: 5px;
    float: left;
    outline: none;
    opacity: 0.6;
    position: relative;
    height: 32px;
    cursor: default;
    border-radius: 100px;
    background-color: $carrot_light_gray_2;
    padding: 0px 16px;
    // padding: .35em .9em;
    color: $carrot_light_gray_3;
    @include avenir_H();
    font-size: 12px;

    span.reaction {
      font-size: 20px;
      top: 3px;
      position: relative;

      &.no-reactions {
        -webkit-filter: grayscale(100%);
        filter: grayscale(100%);

        &:hover {
          -webkit-filter: grayscale(0%);
          filter: grayscale(0%);
        }
      }
    }

    &.has-reactions {
      opacity: 1;
    }

    div.count {
      margin-left: 5px;
      // margin-top: -3px;
      display: inline-block;
    }

    &.can-react {
      cursor: pointer;
      &:hover {
        opacity: 1;
      }
    }

    &.reacted {
      background-color: $carrot_light_yellow;

      &:hover {
        opacity: 0.8;
      }

      div.count {
        color: $carrot_yellow;
      }
    }
  }
}

