Fix the half of a thumb icon cutoff

--- a/scss/partials/_reactions.scss
+++ b/scss/partials/_reactions.scss
@@ -23,6 +23,10 @@ div.reactions {
       top: 3px;
       position: relative;
 
+      &.comment {
+        font-size: 12px;
+      }
+
       &.no-reactions {
         -webkit-filter: grayscale(100%);
         filter: grayscale(100%);
